Fix(web): Collapse content flashing when page loads #DS-538
It did two things. One of them was the animation and the second problem
was that the flickering was caused by setting the class and css attribute
after loading the script.

--- a/packages/web/src/scss/components/Collapse/_Collapse.scss
+++ b/packages/web/src/scss/components/Collapse/_Collapse.scss
@@ -20,6 +20,7 @@
     }
 
     &.is-open:not(.is-transitioning) {
+        height: 100%;
         overflow: visible;
     }
 
